--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@vant/touch-emulator": "^1.4.0",
+    "axios": "^1.2.1",
     "core-js": "^3.8.3",
+    "echarts": "^4.9.0",
+    "element-ui": "^2.15.12",
+    "jquery": "^3.6.2",
+    "vant": "^2.12.53",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
@@ -15,6 +21,8 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "less": "^4.1.3",
+    "less-loader": "^7.3.0",
     "vue-template-compiler": "^2.6.14"
   }
 }
